test(coordinator-core): expand contract coverage as executable specification
Restructure InProcessSingleFlightCoordinatorTest as a behavioral contract
document — each @Nested group now corresponds to one external guarantee
the coordinator promises to its callers, numbered to match the class-level
Javadoc list. Reading the file top-to-bottom tells the story of what the
class does and what it guarantees.

Groups (8 promises, 17 tests total):
  [1] 코알레싱            — same-key concurrent callers share one execution
  [2] 결과 일관성          — owner outcome propagates identically to all waiters
  [3] 자원 정리           — no leak across normal/exceptional/abnormal exits
  [4] kill switch         — operator-driven force release
  [5] 용량 제한           — atomic capacity rejection
  [6] 호출자 격리          — caller cancel does not cross-cut
  [7] 입력 계약           — fail-fast NPE on null args
  [8] 관측성              — InflightEntry exposes diagnostic fields

New tests covering previously unchecked contract surface (9 added):
  - null-rejection on every public-API parameter (4 tests)
  - graceful failure when supplier returns null
  - forceRelease no-op on absent key
  - InflightEntry full-field exposure
  - CongestionException full-field exposure
  - cancellation isolation (proves the fix in the prior commit)

Helpers awaitNoInflight() / awaitSingleInflightWithWaiterCount(int)
extract repeated Awaitility patterns so test bodies show intent only.

Class-level Javadoc states the contract enforcement rule explicitly:
this test must be green for any change to the coordinator class.